# yauiclient

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmakelists-x11-deb-layout.patch  debian-legacy-rules  debian-rules
.github/workflows/: build-libmpv-linux-debian12.yml  build-yauiclient-deb-debian11.yml  build-yauiclient-deb-debian12.yml
debian/: changelog  control  copyright  rules  yauiclient-wayland-system.dirs  yauiclient-wayland.desktop  yauiclient-wayland.postinst  yauiclient-x11.desktop
debian-legacy/: changelog  control  copyright  rules  yauiclient-x11-legacy.desktop  yauiclient-x11-legacy.postinst
src/: CMakefiles.txt
tools/: build-deb-legacy.sh  build-deb.sh  build-linux.sh  package-macos.sh  setup-yauiclient-mingw.sh  setup-yauiclient-msvc.bat
